--- a/style.css
+++ b/style.css
@@ -1,15 +1,111 @@
+/* 作品集頁面 */
 
+.container {
+  display: flex;
+  gap: 40px 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  max-width: 1200px;
+  margin: auto;
+  width: 100%;
+  padding: 80px 12px;
+}
+.card {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.pic {
+  width: 100%;
+  border-radius: 12px;
+  overflow: hidden;
+}
+img {
+  width: 100%;
+  object-fit: cover;
+  vertical-align: top;
+}
+.content {
+  padding: 16px;
+}
+.title {
+  font-weight: 700;
+  font-size: 20px;
+  color: #3b3b3b;
+}
+.text {
+  color: #919191;
+  margin-top: 8px;
+  margin-bottom: 16px;
+}
 
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+.tag {
+  border-radius: 16px;
+  background: #f1f1f1;
+  padding: 4px 12px;
+  color: #3b3b3b;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  padding: auto;
+  gap: 16px;
+}
+
+.item li {
+  width: 35px;
+  text-align: center;
+}
+
+.bookMark {
+  border: 1px solid;
+  border-radius: 4px;
+  background: #000;
+  color: rgba(255, 255, 255, 1);
+  width: 35px;
+}
+
+/* @media screen and (min-width: 768px) 表示當螢幕寬度大於 768px 時應用下面的樣式 */
+@media screen and (min-width: 768px) {
+  .container {
+    gap: 60px 24px;
+  }
+
+  .card {
+    width: 48.1%;
+  }
+
+  .title {
+    font-size: 28px;
+  }
+
+  .text {
+    margin-bottom: 24px;
+  }
+
+  .tags {
+    gap: 16px;
+  }
+}
 
 /* footer */
 .bg {
-    background: url('./images/footer/footer-sm.png') no-repeat center center;
+  background: url("./images/footer/footer-sm.png") no-repeat center center;
+  background-size: cover;
+}
+
+@media screen and (min-width: 512px) {
+  .bg {
+    background: url("./images/footer/footer-lg.png") no-repeat center center;
     background-size: cover;
   }
-  
-  @media screen and (min-width: 512px) {
-    .bg {
-      background: url('./images/footer/footer-lg.png') no-repeat center center;
-      background-size: cover;
-    }
-  }
+}
