--- a/style.css
+++ b/style.css
@@ -242,25 +242,88 @@ img {
 .banner{
   padding: 80px 0px;
   font-family: "Noto Sans TC", sans-serif;
-}
-.banner h1{
-  text-align: center;
-  font-size: 24px;
-  color: #1E1E1E;
   line-height: 1.5;
   font-weight: 400;
+  text-align: center;
+  max-width: 1296px;
+  margin:0 auto;
+}
+.banner-top{
+  font-size: 24px;
+  color: #1E1E1E;
   gap: 16px;
   position: relative;
+  margin-bottom: 24px;
 }
 
-.banner-top h1::before {
+.banner-top::before {
   content: "";
   position: absolute;
-  width: 100px;
-  height: 10px;
-  background-color: red;
-  /* background-image: url("./images/banner/banner-top.png"); */
-  left: 15%;
+  width: 15px;
+  height: 15px;
+  background: url("./images/banner/vector-top.png");
+  background-size: 100% 100%;
+  margin-left: -1em;
+  margin-bottom: 1em;
+}
+
+.banner-top::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background: url("./images/banner/vector-bottom.png");
+  background-size: 100% 100%;
+  margin-left: 0.5em;
+  margin-top: 1em;
+}
+
+.underline-banner{
+  position: relative;
+  text-decoration: none;
+}
+
+.underline-1::after, .underline-2::after {
+  position: absolute;
+  content: "";
+  background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/mark.png?raw=true");
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  z-index: -1;
+  left: 0;
+  bottom: -3px;
+}
+
+.banner-bottom{
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.banner-bottom h1 {
+  color: #5b5b5b;
+  margin-bottom: 8px;
+  position: relative;
+  padding-bottom: 4px;
+}
+
+.banner-bottom h1::after {
+  display: block;
+  width: 2em;
+  content: "";
+	position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 2px solid gray;
+}
+
+.banner-bottom p {
+  color:#3B3B3B;
+  word-break: break-all;
 }
 
 /* footer */
